--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
 version: "2.4"
 services:
-  java:
+  partner-service:
     image: openjdk:17
     volumes:
       - ./:/app
     command: bash -c "cd /app && java -jar partner-service-1.0.1-all.jar --port=8032"
     ports:
       - "8032:8032"
+
+  candlesticks:
+    depends_on:
+      - partner-service
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: candlesticks-app
+    ports:
+      - "9000:9000"
