Update Docker setup to use JDK 21 and define container name
Upgraded the Dockerfile to use JDK 21 with a multi-stage build for efficiency in deployment. Added container names in docker-compose.yml for better traceability and management of Docker containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "2.4"
 services:
   partner-service:
     image: openjdk:17
     volumes:
       - ./:/app
     command: bash -c "cd /app && java -jar partner-service-1.0.1-all.jar --port=8032"
+    container_name: partner-service-app
     ports:
       - "8032:8032"
 
