Set timezone for candlesticks-app to Europe/Berlin.
Added the TZ environment variable to ensure the candlesticks-app container operates in the European/Berlin timezone. This change aims to align scheduled tasks and logging timestamps with the local time for consistency and compliance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: candlesticks-app
+    environment:
+      - TZ=Europe/Berlin
     ports:
       - "9000:9000"
